Fix caesura spacing issue

--- a/css/poem.styl
+++ b/css/poem.styl
@@ -42,7 +42,6 @@ span
     padding 0 1ex 0 0
     vertical-align bottom
     font-size 13px
-    display table-cell
     empty-cells show
     text-align center
 
@@ -147,7 +146,7 @@ small
         background #ddd
 
 #rhyme
-    height 0px
+    height 0
     width 25px
     float left
     background #444
@@ -162,7 +161,7 @@ small
         height 16px
         margin 0
         padding 0 2px
-        border none
+        border 0
         color #fff
         font-size 11px
         &:hover
